can't compile with these warnings on arch

--- a/oad/Makefile
+++ b/oad/Makefile
@@ -60,7 +60,8 @@ ${libname}: main.o ${exte}
 %.o: %.oc
 	${OCOMP} $< ${OFLAGS}
 	${OCONV} $<.x
-	$(CC) ${model} -c -w -fPIC ${compilerflags} $*.c
+	$(CC) ${model} -c -w -fPIC ${compilerflags} -Wno-int-conversion -Wno-incompatible-pointer-types $*.c
+#-Wno are a must at pkgbuild
 #-fPIC since launchpad bionic build
 #-Wimplicit-function-declaration is good but anyway when making .x, ocompiler is also checking for this error
 %.ohi: %.oh
