--- a/src/Makefile
+++ b/src/Makefile
@@ -160,13 +160,19 @@ install-lib:
 		install -D ../dev/actionswf.h $(DESTDIR)$(prefix)/include/${projname}/actionswf.h && \
 		install -D ../dev/import.oh $(DESTDIR)$(prefix)/include/${projname}/import.oh && \
 		install -D ../dev/importf.oh $(DESTDIR)$(prefix)/include/${projname}/importf.oh && \
-		install -D ../dev/flags.oh $(DESTDIR)$(prefix)/include/${projname}/flags.oh
+		install -D ../dev/flags.oh $(DESTDIR)$(prefix)/include/${projname}/flags.oh; \
 	fi
 
 install: all install-lib
 
 uninstall:
 	-rm -f $(DESTDIR)$(prefix)/lib/${libname}
+	-if [ -e ../include_dev ]; then \
+		rm -f $(DESTDIR)$(prefix)/include/${projname}/actionswf.h; \
+		rm -f $(DESTDIR)$(prefix)/include/${projname}/import.oh; \
+		rm -f $(DESTDIR)$(prefix)/include/${projname}/importf.oh; \
+		rm -f $(DESTDIR)$(prefix)/include/${projname}/flags.oh; \
+	fi
 
 .PHONY: all compile ounused def install install-lib clean distclean uninstall test
 
