--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,7 @@ override_dh_auto_install:
 	#from otoc
 	echo dev/flags.h usr/include/actionswf/ >> debian/libactionswf-dev.install
 	echo dev/flagss.h usr/include/actionswf/ >> debian/libactionswf-dev.install
+	echo dev/actionswf.oh usr/include/actionswf/ >> debian/libactionswf-dev.install
 	#not from otoc
 	echo dev/actionswf.h usr/include/actionswf/ >> debian/libactionswf-dev.install
 
