--- a/dev/Makefile
+++ b/dev/Makefile
@@ -6,7 +6,8 @@ ifndef OCONV
 OCONV=otoc
 endif
 
-all: flags.h flagss.h
+all: flags.h flagss.h actionswf.oh
+
 %.h: %.ohi
 	${OCOMP} $< x_file 2 logfile 0
 	${OCONV} $<.x
@@ -16,21 +17,26 @@ all: flags.h flagss.h
 	echo "override include_sec 1" >> $@
 	cat $< >> $@
 
+actionswf.oh: action_swf.oh
+	sed "s/^#//g" $< > $@
+
 test:
 	echo dev
 clean:
-	-rm -f flags.ohi.x flagss.ohi.x flags.ohi flagss.ohi flags.h flagss.h
+	-rm -f flags.ohi.x flagss.ohi.x flags.ohi flagss.ohi flags.h flagss.h actionswf.oh
 distclean: clean
 
 install:
 	if [ -e ../include_dev ]; then \
 		install -D flags.h $(DESTDIR)$(prefix)/include/actionswf/flags.h && \
-		install -D flags.h $(DESTDIR)$(prefix)/include/actionswf/flagss.h; \
+		install -D flags.h $(DESTDIR)$(prefix)/include/actionswf/flagss.h && \
+		install -D actionswf.oh $(DESTDIR)$(prefix)/include/actionswf/actionswf.oh; \
 	fi
 uninstall:
 	-if [ -e ../include_dev ]; then \
 		rm -f $(DESTDIR)$(prefix)/include/actionswf/flags.h; \
 		rm -f $(DESTDIR)$(prefix)/include/actionswf/flagss.h; \
+		rm -f $(DESTDIR)$(prefix)/include/actionswf/actionswf.oh; \
 	fi
 
 .PHONY: all install clean distclean uninstall test
