--- a/.github/workflows/pkgarm.yml
+++ b/.github/workflows/pkgarm.yml
@@ -18,8 +18,19 @@ jobs:
     run: |
      sudo apt update
      sudo apt install -y pacman-package-manager qemu-user libc6-i386-cross libc6-amd64-cross makepkg libarchive-tools #libarchive-tools with bsdtar, called at makepkg
-     wget https://github.com/colin-i/o/releases/download/1-5%2B226/ocompiler-1.5+226-1-arch-x86_64.pkg.tar.zst
-     sudo pacman -U --arch x86_64 --assume-installed lib32-glibc --noconfirm ocompiler-1.5+226-1-arch-x86_64.pkg.tar.zst
+
+     git clone -n --depth=1 --filter=tree:0 https://github.com/colin-i/pkgbuilds
+     cd pkgbuilds
+     git sparse-checkout set --no-cone /ocompiler
+     git checkout
+     cd ocompiler
+     vera=`cat ./PKGBUILD | grep ^pkgver | grep -Po "(?<==).*"`
+     ver=`echo ${vera} | sed "s/\./-/"`
+     rel=`cat ./PKGBUILD | grep ^pkgrel | grep -Po "(?<==).*"`
+     cd ../..
+
+     wget https://github.com/colin-i/o/releases/download/${ver}/ocompiler-${vera}-${rel}-arch-x86_64.pkg.tar.zst
+     sudo pacman -U --arch x86_64 --assume-installed lib32-glibc --noconfirm ocompiler-${vera}-${rel}-arch-x86_64.pkg.tar.zst
 
      cd src/oad
      LD_LIBRARY_PATH=/usr/i686-linux-gnu/lib:/usr/x86_64-linux-gnu/lib \
