-dev with main package same version req

--- a/debian/rules
+++ b/debian/rules
@@ -35,3 +35,9 @@ override_dh_auto_install:
 	echo oad/liboadbgdata.so usr/lib/ >> debian/actionswf.install
 
 	dh_auto_install -- prefix=/usr
+
+override_dh_gencontrol:
+	dh_gencontrol
+	echo -n "Depends: actionswf (= " >> debian/libactionswf-dev/DEBIAN/control
+	echo -n `cat debian/changelog | head -1 | grep -Poe "[^(]*(?=\))"` >> debian/libactionswf-dev/DEBIAN/control
+	echo ")" >> debian/libactionswf-dev/DEBIAN/control
