--- a/oad/Makefile
+++ b/oad/Makefile
@@ -47,7 +47,7 @@ re:
 
 xlog=../include/xlog.
 
-items=intern compare frame string branch ibranch log save mark
+items=intern compare frame string branch ibranch log save mark ${platform}
 #$(eval subobjects = )
 $(foreach var,$(items),$(eval subobjects += ${var}.o))
 #$(eval sublogs = )
