that gcc was not the solution

--- a/src/Makefile
+++ b/src/Makefile
@@ -85,8 +85,10 @@ OFLAGS += underscore_pref 1
 all: ${libname}
 
 ifeq (${conv_64},1)
-#this past that focal ld is not, don't think there will be problems with cc: ATLDCOM = $(LD) ${linkerflags} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${eobs} -shared -entry DllMain -o ${prefname} -lc ${L} `pkg-config --libs zlib` -L${items_prefix}. -l:${exte} --exclude-libs ${exte}
-ATLDCOM=$(CC) -m32  ${eobs} -shared -shared -Wl,-entry=DllMain ${linkerflagsextra} -o ${prefname} -lc ${L} `pkg-config --libs zlib` -L${items_prefix}. -l:${exte} -Wl,--exclude-libs=${exte}
+#this past that focal ld is not. the cc variant is linking but the result will be bad with binutils
+#ATLDCOM=$(CC) -m32 ${linkerflags} ${linkerflagsextra} ${eobs} -shared -shared -Wl,-entry=DllMain -o ${prefname} -lc ${L} `pkg-config --libs zlib` -L${items_prefix}. -l:${exte} -Wl,--exclude-libs=${exte}
+#need to use LLVM lld for a solution, even then still getting relocation cannot be used against symbol, recompile with -fPIC
+ATLDCOM = $(LD) -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${linkerflags} ${eobs} -shared -entry DllMain -o ${prefname} ${Lc} -lc ${L} `pkg-config --libs zlib` -L${items_prefix}. -l:${exte} --exclude-libs ${exte}
 ${libname}: ${name}
 	ln -f ${name} ${libname}
 
