--- a/include/Makefile
+++ b/include/Makefile
@@ -13,10 +13,16 @@ items=action ascii ${platform}home ${platform} prog program xlog
 $(foreach var,$(items),$(eval headers += ${var}.h))
 $(foreach var,$(items),$(eval xfiles += ${var}.ohi.x))
 
-all: ${headers}
+include ../src/items
+include ../src/hitems
+$(foreach var,$(hreqs),$(eval chreqs += ../include/${var}.h))
+
+all: ${ohreqs} ${chreqs} ${headers}
+
+include ../src/rules
 
 %.h: %.ohi
-	${OCOMP} $< x_file 2 logfile 0
+	${OCOMP} $< x_file 2 logfile 0 include_sec 1
 	${OCONV} $<.x
 %.ohi: %.oh
 	echo "format elfobj64" > $@
@@ -27,9 +33,11 @@ lin.ohi: lin.oh
 	echo "orphan off" >> $@
 	cat $< >> $@
 	sed -i "s/^const path_separator=Slash/const path_separator=`cat ascii.oh | grep -Po '(?<=Const Slash=).*'`/" $@
+${chreqs}:
+	ln -s `echo $* | sed s/platform/${platform}/`.h $@
 
 clean:
-	-rm -f ${xfiles} lin.ohi ${headers}
+	-rm -f ${xfiles} lin.ohi ${headers} ${ohreqs} ${chreqs}
 distclean: clean
 
 .PHONY: all clean distclean
